--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
-lib64/
+/lib/
+/lib64/
 parts/
 sdist/
 var/
@@ -71,6 +71,9 @@ htmlcov/
 # Misc
 .DS_Store
 Thumbs.db
+
+# Keep frontend lib directory
+!frontend/src/lib/
 
 # dependencies
 /.pnp
