--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,11 +1,5 @@
 {
-  "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
   "framework": "nextjs",
-  "outputDirectory": ".next",
-  "regions": ["sfo1"],
-  "env": {
-    "NEXT_PUBLIC_API_URL": "production-api-url"
-  }
+  "buildCommand": "next build",
+  "installCommand": "npm install"
 } 
