feat: complete migration from Auth0 to Resend email authentication
- Remove Auth0 dependencies and configuration
- Add Resend email authentication implementation
- Update frontend routes and components
- Add email verification flow
- Update CI/CD configuration
- Clean up old migration files

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,138 +6,94 @@ on:
   pull_request:
     branches: [ main ]
 
-jobs:
-  test:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v3
+env:
+  PROJECT_ID: carecall-943219616764
+  REGION: us-east1
+  BACKEND_SERVICE: carecall-backend
+  FRONTEND_SERVICE: carecall-frontend
+  INSTANCE_CONNECTION_NAME: carecall-464302:us-east1:carecall-db
+  DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
 
+jobs:
+  test-backend:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v2
       with:
         python-version: '3.11'
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
         
-    - name: Install Python dependencies
+    - name: Install dependencies
       run: |
         cd backend
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         
-    - name: Install Node.js dependencies
-      run: |
-        cd frontend
-        npm install
-        
-    - name: Run backend tests
+    - name: Run tests
       env:
-        AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
-        AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID }}
-        AUTH0_CLIENT_SECRET: ${{ secrets.AUTH0_CLIENT_SECRET }}
-        AUTH0_AUDIENCE: ${{ secrets.AUTH0_AUDIENCE }}
-        GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-        GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_SA_KEY }}
-        TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID }}
-        TWILIO_AUTH_TOKEN: ${{ secrets.TWILIO_AUTH_TOKEN }}
+        DATABASE_URL: sqlite:///./test.db
+        JWT_SECRET: ${{ secrets.JWT_SECRET }}
+        RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
       run: |
         cd backend
         pytest
-        
-    - name: Run frontend tests
-      env:
-        AUTH0_SECRET: ${{ secrets.AUTH0_SECRET }}
-        AUTH0_BASE_URL: 'https://carecall.club'
-        AUTH0_ISSUER_BASE_URL: ${{ secrets.AUTH0_ISSUER_BASE_URL }}
-        AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID }}
-        AUTH0_CLIENT_SECRET: ${{ secrets.AUTH0_CLIENT_SECRET }}
-      run: |
-        cd frontend
-        npm run test
-        
-    - name: Run linters
-      run: |
-        cd backend
-        pip install flake8
-        flake8 .
-        cd ../frontend
-        npm run lint
 
   deploy-backend:
-    needs: test
-    if: github.ref == 'refs/heads/main'
+    needs: test-backend
     runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up Cloud SDK
-      uses: google-github-actions/setup-gcloud@v2
-      with:
-        project_id: ${{ secrets.GCP_PROJECT_ID }}
+    if: github.ref == 'refs/heads/main'
 
-    - name: Authenticate to Google Cloud
-      uses: google-github-actions/auth@v2
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@v0
       with:
-        credentials_json: ${{ secrets.GCP_SA_KEY }}
-        
+        project_id: ${{ env.PROJECT_ID }}
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        export_default_credentials: true
+
     - name: Build and push Docker image
-      env:
-        AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
-        AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID }}
-        AUTH0_CLIENT_SECRET: ${{ secrets.AUTH0_CLIENT_SECRET }}
-        AUTH0_AUDIENCE: ${{ secrets.AUTH0_AUDIENCE }}
-        GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-        GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_SA_KEY }}
-        TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID }}
-        TWILIO_AUTH_TOKEN: ${{ secrets.TWILIO_AUTH_TOKEN }}
-        FRONTEND_URL: 'https://carecall.club'
-        BASE_URL: 'https://api.carecall.club'
       run: |
-        cd backend
-        gcloud builds submit --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/carecall-backend
-        
+        gcloud auth configure-docker
+        docker build -t gcr.io/${{ env.PROJECT_ID }}/${{ env.BACKEND_SERVICE }}:${{ github.sha }} ./backend
+        docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.BACKEND_SERVICE }}:${{ github.sha }}
+
     - name: Deploy to Cloud Run
       run: |
-        gcloud run deploy carecall-backend \
-          --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/carecall-backend \
-          --platform managed \
-          --region ${{ secrets.GCP_REGION }} \
-          --allow-unauthenticated \
-          --set-env-vars "AUTH0_DOMAIN=${{ secrets.AUTH0_DOMAIN }}" \
-          --set-env-vars "AUTH0_CLIENT_ID=${{ secrets.AUTH0_CLIENT_ID }}" \
-          --set-env-vars "AUTH0_CLIENT_SECRET=${{ secrets.AUTH0_CLIENT_SECRET }}" \
-          --set-env-vars "AUTH0_AUDIENCE=${{ secrets.AUTH0_AUDIENCE }}" \
-          --set-env-vars "GCP_PROJECT_ID=${{ secrets.GCP_PROJECT_ID }}" \
-          --set-env-vars "TWILIO_ACCOUNT_SID=${{ secrets.TWILIO_ACCOUNT_SID }}" \
-          --set-env-vars "TWILIO_AUTH_TOKEN=${{ secrets.TWILIO_AUTH_TOKEN }}" \
-          --set-env-vars "FRONTEND_URL=https://carecall.club" \
-          --set-env-vars "BASE_URL=https://api.carecall.club"
+        gcloud run deploy ${{ env.BACKEND_SERVICE }} \
+        --image gcr.io/${{ env.PROJECT_ID }}/${{ env.BACKEND_SERVICE }}:${{ github.sha }} \
+        --region ${{ env.REGION }} \
+        --platform managed \
+        --allow-unauthenticated \
+        --add-cloudsql-instances ${{ env.INSTANCE_CONNECTION_NAME }} \
+        --update-env-vars DATABASE_URL="postgresql+asyncpg://postgres:${{ env.DB_PASSWORD }}@/${{ env.INSTANCE_CONNECTION_NAME }}/carecall?host=/cloudsql/${{ env.INSTANCE_CONNECTION_NAME }}" \
+        --update-env-vars JWT_SECRET="${{ secrets.JWT_SECRET }}" \
+        --update-env-vars RESEND_API_KEY="${{ secrets.RESEND_API_KEY }}"
 
   deploy-frontend:
-    needs: test
-    if: github.ref == 'refs/heads/main'
+    needs: deploy-backend
     runs-on: ubuntu-latest
-    
+    if: github.ref == 'refs/heads/main'
+
     steps:
-    - uses: actions/checkout@v3
-    
+    - uses: actions/checkout@v2
+
+    - name: Install Vercel CLI
+      run: npm install --global vercel@latest
+
     - name: Deploy to Vercel
-      uses: amondnet/vercel-action@v25
-      with:
-        vercel-token: ${{ secrets.VERCEL_TOKEN }}
-        vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-        vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-        working-directory: ./frontend
-        vercel-args: '--prod'
       env:
-        AUTH0_SECRET: ${{ secrets.AUTH0_SECRET }}
-        AUTH0_BASE_URL: 'https://carecall.club'
-        AUTH0_ISSUER_BASE_URL: ${{ secrets.AUTH0_ISSUER_BASE_URL }}
-        AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID }}
-        AUTH0_CLIENT_SECRET: ${{ secrets.AUTH0_CLIENT_SECRET }}
-        API_BASE_URL: 'https://api.carecall.club' 
+        VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+        VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+        VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+        JWT_SECRET: ${{ secrets.JWT_SECRET }}
+        RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
+      run: |
+        cd frontend
+        vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+        vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+        vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }} 
