--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = sqlite+aiosqlite:///./carecall.db
+sqlalchemy.url = postgresql://postgres:carecall-password-123@34.75.166.86:5432/carecall
 
 
 [post_write_hooks]
