--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.109.1
-uvicorn==0.22.0
-sqlalchemy==2.0.19
-pydantic==2.5.0
+fastapi==0.109.2
+uvicorn==0.27.1
+sqlalchemy==2.0.27
+pydantic==2.6.1
 pydantic-settings==2.1.0
 python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
@@ -12,6 +12,26 @@ pytest==7.4.0
 httpx==0.24.1
 pytest-asyncio==0.21.1
 aiosqlite==0.19.0
-alembic==1.12.0
+alembic==1.13.1
 bcrypt==4.0.1
-greenlet==3.0.3 
+greenlet==3.0.3
+annotated-types==0.6.0
+anyio==4.2.0
+asyncpg==0.29.0
+click==8.1.7
+h11==0.14.0
+httptools==0.6.1
+idna==3.6
+Mako==1.3.2
+MarkupSafe==2.1.5
+pydantic-core==2.16.2
+python-dotenv==1.0.1
+PyYAML==6.0.1
+redis==5.0.1
+resend==0.7.2
+sniffio==1.3.0
+starlette==0.36.3
+typing_extensions==4.9.0
+uvloop==0.19.0
+watchfiles==0.21.0
+websockets==12.0 
