--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,32 +1,22 @@
-FROM python:3.11-slim
+FROM python:3.9-slim
 
+# Allow statements and log messages to immediately appear in the logs
+ENV PYTHONUNBUFFERED True
+
+# Create and change to the app directory.
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    && rm -rf /var/lib/apt/lists/*
-
-# Copy requirements first for better caching
+# Copy local code to the container image.
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt && \
-    pip install --no-cache-dir "pydantic[email]"
 
-# Create directories with proper permissions
-RUN mkdir -p /app/data /app/media && \
-    chmod -R 777 /app/data /app/media
+# Install production dependencies.
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application
+# Copy local code to the container image.
 COPY . .
 
-# Set environment variables
-ENV PYTHONUNBUFFERED=1
-ENV PORT=8080
-ENV DATABASE_URL="sqlite+aiosqlite:///./data/data.db"
-ENV HOST=0.0.0.0
+# Set environment variable for the port
+ENV PORT 8080
 
-# Expose the port
-EXPOSE 8080
-
-# Run the application
-CMD exec uvicorn main:app --host $HOST --port $PORT 
+# Run the web service on container startup using gunicorn with uvicorn workers
+CMD exec uvicorn main:app --host 0.0.0.0 --port ${PORT} --workers 1 --timeout-keep-alive 75 
