--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,12 +7,11 @@ on:
     branches: [ main ]
 
 env:
-  PROJECT_ID: carecall-943219616764
+  PROJECT_ID: carecall-464302
   REGION: us-east1
   BACKEND_SERVICE: carecall-backend
   FRONTEND_SERVICE: carecall-frontend
   INSTANCE_CONNECTION_NAME: carecall-464302:us-east1:carecall-db
-  DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
 
 jobs:
   test-backend:
@@ -35,8 +34,8 @@ jobs:
     - name: Run tests
       env:
         DATABASE_URL: sqlite:///./test.db
-        JWT_SECRET: ${{ secrets.JWT_SECRET }}
-        RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
+        JWT_SECRET: test-secret
+        RESEND_API_KEY: test-key
       run: |
         cd backend
         pytest
@@ -49,12 +48,16 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Google Auth
+      id: auth
+      uses: google-github-actions/auth@v1
+      with:
+        credentials_json: ${{ secrets.GCP_SA_KEY }}
+
     - name: Set up Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0
+      uses: google-github-actions/setup-gcloud@v1
       with:
         project_id: ${{ env.PROJECT_ID }}
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-        export_default_credentials: true
 
     - name: Build and push Docker image
       run: |
@@ -65,14 +68,12 @@ jobs:
     - name: Deploy to Cloud Run
       run: |
         gcloud run deploy ${{ env.BACKEND_SERVICE }} \
-        --image gcr.io/${{ env.PROJECT_ID }}/${{ env.BACKEND_SERVICE }}:${{ github.sha }} \
-        --region ${{ env.REGION }} \
-        --platform managed \
-        --allow-unauthenticated \
-        --add-cloudsql-instances ${{ env.INSTANCE_CONNECTION_NAME }} \
-        --update-env-vars DATABASE_URL="postgresql+asyncpg://postgres:${{ env.DB_PASSWORD }}@/${{ env.INSTANCE_CONNECTION_NAME }}/carecall?host=/cloudsql/${{ env.INSTANCE_CONNECTION_NAME }}" \
-        --update-env-vars JWT_SECRET="${{ secrets.JWT_SECRET }}" \
-        --update-env-vars RESEND_API_KEY="${{ secrets.RESEND_API_KEY }}"
+          --image gcr.io/${{ env.PROJECT_ID }}/${{ env.BACKEND_SERVICE }}:${{ github.sha }} \
+          --region ${{ env.REGION }} \
+          --platform managed \
+          --allow-unauthenticated \
+          --add-cloudsql-instances ${{ env.INSTANCE_CONNECTION_NAME }} \
+          --set-env-vars "^#^DATABASE_URL=postgresql+asyncpg://postgres:${{ secrets.DB_PASSWORD }}@/${{ env.PROJECT_ID }}:${{ env.REGION }}:carecall-db/carecall?host=/cloudsql/${{ env.INSTANCE_CONNECTION_NAME }},JWT_SECRET=${{ secrets.JWT_SECRET }},RESEND_API_KEY=${{ secrets.RESEND_API_KEY }},LOG_LEVEL=info,WORKERS=1"
 
   deploy-frontend:
     needs: deploy-backend
