--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -19,13 +21,13 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toast": "^1.2.14",
     "@tanstack/react-query": "^5.24.1",
     "@types/axios": "^0.9.36",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "jose": "^5.2.2",
+    "jose": "^5.10.0",
     "lucide-react": "^0.341.0",
     "next": "^14.2.25",
     "next-themes": "^0.4.6",
